# GPT-Parser

./: .gitignore  README.md  main.py  pyproject.toml  settings.json  test.py
handlers/: __init__.py
handlers/config/: __init__.py  config.py
handlers/exel/: __init__.py  exel.py
handlers/gpt/: __init__.py  gpt_analysator.py
handlers/parsers/: __init__.py  indiegogo_parser.py  kickstarter_parser.py  parser.py
handlers/processes/: __init__.py  controller_of_process.py  process_of_parsers.py
models/: __init__.py  page_info.py
resources/assets/: Logo.txt
resources/data/: projects.docx  result.xlsx
view/: view.py
