[tool.poetry]
name = "gpt parser"
version = "0.1.0"
description = ""
authors = ["RomrerioPrevious <ggJohn12345@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
rich = "^13.7.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
openai = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
