[tool.poetry]
name = "gpt parser"
version = "0.1.0"
description = "GPT-Parser is a parser with GPT-4 for analys projects on sites: Kickstarter and Indiegogo"
authors = ["RomrerioPrevious <ggJohn12345@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
rich = "^13.7.0"
beautifulsoup4 = "^4.12.2"
openai = "^1.3.7"
fake-useragent = "^1.4.0"
selenium = "^4.16.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
